Continue to add writing, tweak garden, and add pretty picturesssss

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Sam Levy # the main title
 
-tagline: Blog and Stuff 
+tagline: Technically Blogging
 
 description: >- # used by seo meta and the atom feed
   A personal blog on technology, podcasts, and art 
